[package]
name = "rust-fetch"
version = "1.0.4"
edition = "2021"
authors = ["Asem Qaffaf <asem@qaffaf.com>"]
license = "MIT OR Apache-2.0"
description = "A world-class WebAssembly HTTP client library with excellent error handling and clean API"
repository = "https://github.com/asemqaffaf/rust-fetch"
keywords = ["wasm", "http", "client", "fetch", "webassembly"]
categories = ["wasm", "web-programming", "web-programming::http-client"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = "0.3"
serde_urlencoded = "0.7"

# Platform-specific dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
tokio = { version = "1", features = ["macros", "rt"] }

[profile.release]
opt-level = "z"
lto = true

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 2
